--- a/content/til/2024-12-16.md
+++ b/content/til/2024-12-16.md
@@ -2,6 +2,7 @@
 title = 'Difference between a virtual and traditional thread in Java'
 date = 2024-12-16T23:56:29-05:00
 draft = false
+type = "til"
 +++
 
 Today I learned that Java has virtual threads introduced in Project Loom.
