--- a/content/til/2024-12-23.md
+++ b/content/til/2024-12-23.md
@@ -1,13 +1,17 @@
 +++
 title = '2024 12 23'
 date = 2024-12-23T15:19:31-05:00
-draft = true
+draft = false
 type = "til"
 +++
 
 I've been learning Java recently and its my first time using it in a job setting, so still getting the hang of how certain things work.
 
-Was interested in how I can go from "Generating run configs" to pressing the play button and it does quite a few things under the hood:
+We have a company specific IntelliJ plugin that allows us to go from clicking "Generating run configs" to hitting the "Run" button and the project runs:
 
+- It looks at the deployment files for the appropriate app setup (ie. docker image, commands, schedule, among other things)
+- Loads any env var + tokens based on scopes
+- Builds out the commands to build the actual Java project
+- Runs the resulting executable + connects to relevant resources?
 
--
+It does a bunch of other things as well, but this is definitely a way to ensure a streamlined developer experience for all engineers!
