--- a/content/til/2024-12-23.md
+++ b/content/til/2024-12-23.md
@@ -5,13 +5,15 @@ draft = false
 type = "til"
 +++
 
-I've been learning Java recently and its my first time using it in a job setting, so still getting the hang of how certain things work.
+I've been learning Java recently and it's my first time using it in a job setting, so still getting the hang of how certain things work.
 
-We have a company specific IntelliJ plugin that allows us to go from clicking "Generating run configs" to hitting the "Run" button and the project runs:
+We have a company specific IntelliJ plugin that allows us to go from clicking a button "Generating run configs" to hitting the "Run" button and the deployable "just works" locally.
 
-- It looks at the deployment files for the appropriate app setup (ie. docker image, commands, schedule, among other things)
+Under the hood, it:
+
+- Looks at the deployment files for the appropriate app setup (ie. docker image, commands, schedule, among other things)
 - Loads any env var + tokens based on scopes
 - Builds out the commands to build the actual Java project
 - Runs the resulting executable + connects to relevant resources?
 
-It does a bunch of other things as well, but this is definitely a way to ensure a streamlined developer experience for all engineers!
+It does a bunch of other things as well, but this is definitely a way to ensure a streamlined developer experience!
