Updates to the TIL

--- a/content/til/2025-01-28.md
+++ b/content/til/2025-01-28.md
@@ -6,19 +6,23 @@ draft = false
 
 I'm reading about caching and the difference between temporal and spatial locality.
 
-**Spatial locality** is the idea that if the CPU fetches data from memory at any given moment it's likely to fetch the neighboring data next.
-- MP3 data has strong spatial locality since you know you're going to need t = 1s and then t = t + 1s and so forth as you listen to a track
+**Spatial locality**: is the likelihood of accessing memory addresses near recently accessed locations.
+- Example: MP3 data has strong spatial locality since you know you're going to need t = 1s and then t = t + 1s (sequential traversal) and so forth as you listen to a track
+- Code: related functions living close in memory
+- Data: contiguous data structures (ie. arrays)
 
-**Temporal locality** is the idea that if the CPU fetches data once, it will likely be fetched again in the near future.
-- Applications that have simple loops executing over and over (ie. games, photoshop filter, etc.) have good temporal locality since they need the same data again and again
+**Temporal locality** is the likelihood of reusing recently accessed memory locations.
+-  Example: simple loops executing over the same data structure repeatedly (ie. games, photoshop filter, etc.)
+- Code: hot paths being executed frequently (ie. game loop, event handlers)
+- Data: frequently accessed state (ie. LRU cache)
 
-One thing to highlight is the temporal/spatial locality of CODE vs DATA
-- Spatial Locality
-  - Code: when functions/classes exist near each other performing related work
-  - Data: when the data itself exists near each other
+Using a media player as a case study:
+- It has good spatial locality as we're sequentially reading the audio/video frames
+- It has mixed temporal locality:
+  - High code (decoder runs continuously)
+  - Low data (frames usually processed once)
 
-- Temporal Locality
-  - Code: when you need to access certain code blocks around the same time (ie. games, simulations, etc.)
-  - Data: good way to look at bad temporal locality of data is mp3 player that doesn't need the data that was already used once. Web browsing has good temporal locality of data since you would possibly like to revisit recently accessed pages, etc.
-  - MP3 player is an example of good temporal locality of code, but not for data.
+Keeping the above in mind could help make better decisions while:
+- choosing data structures
+- understanding data access patterns
 
